kubernetes/apps/enchanted-natures/api/app/deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: enchanted-natures
  labels:
    app: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 10
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: api
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: api
          image: ghcr.io/enchantednatures/enchantednatures.api:v0.3.0
          imagePullPolicy: Always
          volumeMounts:
            - name: config
              mountPath: /config/production.yaml
              subPath: config.yaml
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          livenessProbe:
            tcpSocket:
              port: 6969
            initialDelaySeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health_check
              port: 6969
            initialDelaySeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 6969
              name: enchanted-api

      volumes:
      - name: config
        configMap:
          name: enchanted-api
      restartPolicy: Always
