kubernetes/apps/enchanted-natures/api/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: enchanted-natures
spec:
  selector:
    app: api
  type: ClusterIP
  ports:
    - name: api
      protocol: TCP
      port: 6969
      targetPort: 6969
